--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     <div class="work-overlay">
                         <span class="work-category">Frontend Developer</span>
                         <h3 class="work-title">Recipes Marketplace</h3>
-                        <a href="./projects/Food/food.html" class="work-link">View Project <i class="fas fa-arrow-right"></i></a>
+                        <a href="./projects/Food/index.html" class="work-link">View Project <i class="fas fa-arrow-right"></i></a>
                     </div>
                 </div>
                 
