--- a/index.html
+++ b/index.html
@@ -398,47 +398,8 @@
 
     <a href="#home" class="back-to-top" aria-label="Back to top">↑</a>
 
-    <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Smooth scrolling for anchor links
-            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-                anchor.addEventListener('click', function(e) {
-                    e.preventDefault();
-                    document.querySelector(this.getAttribute('href')).scrollIntoView({
-                        behavior: 'smooth'
-                    });
-                });
-            });
-
-            // Back to top button visibility
-            const backToTopButton = document.querySelector('.back-to-top');
-            window.addEventListener('scroll', function() {
-                if (window.pageYOffset > 300) {
-                    backToTopButton.classList.add('show');
-                } else {
-                    backToTopButton.classList.remove('show');
-                }
-            });
-
-            // Expand service items
-            const expandButtons = document.querySelectorAll('.expand-btn');
-            expandButtons.forEach(button => {
-                button.addEventListener('click', function() {
-                    const serviceItem = this.closest('.service-item');
-                    const content = serviceItem.querySelector('.service-content');
-                    
-                    if (content.style.display === 'block') {
-                        content.style.display = 'none';
-                        this.textContent = '+';
-                    } else {
-                        content.style.display = 'block';
-                        this.textContent = '-';
-                    }
-                });
-            });
-
-        })
-    </script>
+    <script src="index.js"></script>
+    
 </body>
->>>>>>> 6f4aeafadd21e0d5642ba5d2d5ff363c95c321c7
+ 
 </html>
