--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
         <!-- Work Categories -->
     <section id="works" class="work-categories">
         <div class="container">
+            <h2 class="section-title">My Works</h2>
             
             <div class="work-grid">
                 <!-- Project 1 -->
