--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
                 </div>
                 <div class="right-content">
-                    <img src="./assets/me.jpg" alt="Shaurya Rajput" class="profile-image">
+                    <img src="./assets/me.jpeg" alt="Shaurya Rajput" class="profile-image">
                 </div>
             </div>
         </section>
@@ -93,7 +93,7 @@
                 
                 <div class="services-content">
                     <div class="services-image-container">
-                        <img src="./assets/me.jpg" alt="Shaurya Rajput working" class="services-profile-image">
+                        <img src="./assets/me.jpeg" alt="Shaurya Rajput working" class="services-profile-image">
                     </div>
                     
                     <div class="services-list">
