--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 
                 <div class="services-content">
                     <div class="services-image-container">
-                        <img src="./assets/me.jpeg" alt="Shaurya Rajput working" class="services-profile-image">
+                        <img src="./assets/me.jpeg" alt="Shaurya Rajput " class="services-profile-image">
                     </div>
                     
                     <div class="services-list">
