Implement code changes to enhance functionality

--- a/index.html
+++ b/index.html
@@ -319,6 +319,16 @@
                 </div>
                 
                 <!-- Project 5 -->
+                 <div class="work-item">
+                    <img src="./assets/work-5.png" alt="To-DO List" class="work-image">
+                    <div class="work-overlay">
+                        <span class="work-category">Frontend Developer</span>
+                        <h3 class="work-title">To-Do List</h3>
+                        <a href="./projects/To do list/index.html" class="work-link">View Project <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+
+                <!-- Project 6 -->
             </div>
         </div>
     </section>
